--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
             android:label="SignUp_Activity" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AnimatedSplash.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
